Correct Spacing for Signed Out Users

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -124,4 +124,7 @@
 	.add_cat {
 		margin:-15px 0px;
 	}
+	.little_break {
+		margin:-9px 0px;
+	}
 }
